 - Added Edit > Vietnamese Input menu to most SeaMonkey windows.
 - Reduced installer package size further by compressing JavaScript files. The
   original, uncompressed scripts can be found in AVIM's Subversion repository.

Version 20080728.265 (Monday, December 8, 2008)
 - Added support for Firefox 3.2 nightlies.
 - Fixed an issue in preference windows where AVIM prevents the initial pane
   from loading, due to Bug 330458.
 - Fixed an issue that prevented the toolbar buttons from displaying.
 - The toolbar buttons now appear disabled when AVIM is turned off.
 - XaLo's version of AVIM is now recognized and disabled.

Version 20080728.280 (Saturday, January 17, 2008)
 - Added an option to allow diacritics in password boxes. Use caution when using
   accented passwords on a website; the website may not handle Unicode passwords
   properly.
 - Fixed an issue where the option to use Telex while in Auto was mislabeled.
 - Fixed an issue where specialized textboxes would not update after editing a
   word that begins with an accented letter. Affected textboxes include the Find
   Bar and Location Bar in Firefox and the Subject bar in Thunderbird.
 - Fixed an issue where bookmark properties would not save when edited from
   within the Library.
 - Tweaked some spelling rules to prevent invalid vowel sequences.
 - Updated support for the latest BlueGriffon nightlies.
 - Fixed editing in BlueGriffon's rich text editor with AVIM enabled.

Version 20080728.290 (Saturday, February 7, 2008)
 - Fixed a security issue that allowed malicious webpages to execute arbitrary
   JavaScript as privileged code.
 - Improved performance when editing a multiline textbox with a large amount of
   text.
 - Added experimental support for the IME and DiMENSiON extension.

Version ${Version} (${Date})
 - The Mudim script is disabled by default, since Mudim is widespread and
   disabling it does not significantly impact performance.