@@ -238,3 +238,6 @@ Version 20080728.290 (Saturday, February 7, 2008)
 Version ${Version} (${Date})
  - The Mudim script is disabled by default, since Mudim is widespread and
    disabling it does not significantly impact performance.
+ - Pressing Enter while focused on the ID textbox adds the ID to the list.
+ - Pressing Backspace or Delete while focused on the Ignored Textboxes list
+   removes the selected textbox IDs from the list.
